--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 .left-section {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
 
   width: 35%;
@@ -26,6 +26,8 @@ body {
   background-position: center;
 }
 .logo-container {
+  position: relative;
+  top: 20vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -41,4 +43,11 @@ body {
   color: white;
   opacity: 1;
   font-size: 6.5rem;
+}
+.pic-credit {
+  align-self: flex-end;
+}
+.pic-credit *{
+  color: white;
+
 }
